# libmpeghe

./: CMakeLists.txt  GUIDELINES.md  LICENSE  LICENSE2  README.md  Readme.txt  toolchain_armv8.cmake
.github/workflows/: CI.yml
docs/: IA-MPEG-H-3D-Audio-Enc-Mux-Demux-GSG.docx  IA-MPEG-H-3D-Audio-LC-Enc-API.doc  IA-MPEG-H-3D-Audio-LC-Enc-BP.doc  IA-MPEG-H-3D-Audio-LC-Enc-GSG.doc  INDEX.md  doxy.conf
encoder/: impeghe_acelp_enc.c  impeghe_acelp_rom.c  impeghe_acelp_tools.c  impeghe_api.c  impeghe_api.h  impeghe_arith_enc.c  impeghe_arith_enc.h  impeghe_asc_write.c  impeghe_avq_enc.c  impeghe_avq_enc.h  impeghe_avq_rom.c  impeghe_basic_ops_flt.h  impeghe_bitbuffer.c  impeghe_bitbuffer.h  impeghe_block_switch.c  impeghe_block_switch.h  impeghe_block_switch_struct_def.h  impeghe_cnst.h  impeghe_config.h  impeghe_constants.h  impeghe_cplx_pred.c  impeghe_cplx_pred.h  impeghe_crc.c  impeghe_crc.h  impeghe_dmx_cicp2geometry.c  impeghe_dmx_matrix_common.c  impeghe_dmx_matrix_enc.c  impeghe_dmx_matrix_enc_api.c  impeghe_dmx_matrix_enc_api.h  impeghe_drc_api.c  impeghe_drc_common.h  impeghe_drc_enc.c  impeghe_drc_enc.h  impeghe_drc_gain_calculator.c  impeghe_drc_gain_enc.c  impeghe_drc_gain_enc.h  impeghe_drc_mux.c  impeghe_drc_mux.h  impeghe_drc_struct_def.h  impeghe_drc_tables.c  (+120 more)
ffmpeg_plugin/: DISCLAIMER.txt  ffmpeg_mpegh_enc.patch  linux_mpegh_enc_lib.patch  windows_mpegh_enc_lib.patch
ffmpeg_plugin/ffmpeg/docs/: ITT_FFMPEG_MPEGH_ENC_UG.docx
ffmpeg_plugin/ffmpeg/include/: impeghe_apicmd_standards.h  impeghe_block_switch_const.h  impeghe_dmx_cicp2geometry.h  impeghe_dmx_matrix_common.h  impeghe_drc_api.h  impeghe_drc_user_config.h  impeghe_error_codes.h  impeghe_error_handler.h  impeghe_error_standards.h  impeghe_type_def.h
ffmpeg_plugin/ffmpeg/src/: ia_mpegh_enc.c  impeghe_error.c
smoke_test_suite/inp/oam/: sine.oam
test/: impegh_bitbuffer.h  impegh_definitions.h  impegh_demux_define.h  impegh_demux_error.h  impegh_error_codes_mux.h  impegh_error_demux.c  impegh_error_handler.h  impegh_error_standards.h  impegh_mp4_atoms.h  impegh_mp4_defs.h  impegh_mp4_demux.c  impegh_mp4_demux_utils.c  impegh_mp4_demux_utils.h  impegh_mp4_file.c  impegh_mp4_file.h  impegh_mp4_file_wrapper.c  impegh_mp4_file_wrapper.h  impegh_mp4_init.c  impegh_mp4_init.h  impegh_mp4_make_video.h  impegh_mp4_mux.c  impegh_mp4_mux_define.h  impegh_mp4_mux_utils.c  impegh_mp4_mux_utils.h  impegh_mp4_object_type.h  impegh_mp4_odf.h  impegh_mp4_parser.c  impegh_mp4_parser.h  impegh_mp4_proto.h  impegh_mp4_tags.h  impegh_mp4_utils.c  impegh_mp4_utils.h  impegh_mp4_video.c  impegh_mux_rom.c  impegh_mux_rom.h  impegh_type_def.h  impeghe_drc_user_config.c  impeghe_error.c  impeghe_mae_config_defines.h  impeghe_mae_user_config.c  (+3 more)
